<resources>
    <string name="app_name">Muslim VAi</string>
    <string name="dashboard">Dashboard</string>
    <string name="calendar">Calendar</string>
    <string name="quran">Quran</string>
    <string name="dua">Dua</string>
    <string name="quibla">Quibla</string>
    <string name="action_settings">Settings</string>
    <string name="compass_dial" translatable="false">Compass Dial</string>
    <string name="compass_hands" translatable="false">Compass Hands</string>
    <string name="sotw_north">N</string>
    <string name="sotw_east">E</string>
    <string name="sotw_south">S</string>
    <string name="sotw_west">W</string>
    <string name="sotw_northeast">NE</string>
    <string name="sotw_northwest">NW</string>
    <string name="sotw_southeast">SE</string>
    <string name="sotw_southwest">SW</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="change_language">Change Language</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="prayertimes">Prayer Times</string>
    <string name="sunrise" />
    <string name="sunset" />
    <string name="midnight" />
    <string name="fajr">Fajr</string>
    <string name="dhuhr">Dhuhr</string>
    <string name="asr">Asr</string>
    <string name="maghrib">Maghrib</string>
    <string name="isha">Isha</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="today">Today</string>
    <string name="app_bar_title">Muslim VAi</string>
    <string name="underdevelopment">Under Development</string>
    <string name="nearby_mosques">Nearby Mosques</string>
    <string name="digital_tasbih">Digital Tasbih</string>
    <string name="daily_checklist">Daily Checklist</string>
    <string name="important_dua">Important Dua</string>
    <string name="calibrate">calibrate</string>
    <string name="waqt">Waqt</string>
    <string name="next_sahri">Last Time for Upcoming Sahri</string>
    <string name="alarm">Alarm</string>
    <string name="next_iftar">Start Time for Next Iftar</string>
    <string name="time_remaining">Time Remaining</string>
    <string name="nav_header_subtitle">Under Development</string>
    <string name="slash_33">/33</string>
    <string name="zero">0</string>
    <string name="loop_no">Loop No: </string>
    <string name="total">Total: </string>
    <string name="reset">Reset</string>
    <string name="feedback">Feedback</string>
    <string name="six_oclock">06:00</string>
    <string name="save">Save</string>
    <string name="saved">Saved</string>
    <string name="random_time">88:88:88</string>
    <string name="extras">Extras</string>
    <string name="time_left">Time Left</string>
    <string name="reset_clock">88:88</string>
    <string name="upcoming_in">Upcoming in</string>
    <string name="bangladesh">Bangladesh</string>
    <string name="city">City</string>
    <string name="degree">0°</string>
    <string name="north">North</string>
    <string name="nearby_mosque">Nearby Mosque</string>
    <string name="mosque">Mosque</string>
    <string name="current_location">Current Location</string>
    <string name="necessary_dua">Necessary Dua</string>
    <string name="dua_salah_title">Dua for Salah</string>
    <string name="dua_fasting_title">Dua for Fasting</string>
    <string name="dua_misc_title">Misc. Duas</string>
    <string name="dua_zikir_title">Dua for Zikir</string>
    <string name="are_you_fasting">Are you fasting today?</string>
    <string name="have_you_read_quran">Have you read the Quran today?</string>
    <string-array name="division_en">
        <item>Dhaka</item>
        <item>Rajshahi</item>
        <item>Rangpur</item>
        <item>Khulna</item>
        <item>Chittagong</item>
        <item>Mymensingh</item>
        <item>Barisal</item>
        <item>Sylhet</item>
    </string-array>
    <string-array name="division_bn">
        <item>ঢাকা</item>
        <item>রাজশাহী</item>
        <item>রংপুর</item>
        <item>খুলনা</item>
        <item>চট্টগ্রাম</item>
        <item>ময়মনসিংহ</item>
        <item>বরিশাল</item>
        <item>সিলেট</item>
    </string-array>
    <string name="surah">Surah</string>
    <string name="number">Number</string>
    <string name="makki">Makki</string>
    <string name="ayahs">Ayahs</string>
    <string name="zakat_calculator">Zakat Calculator</string>
    <string name="allah_names">99 Names</string>
</resources>